--- a/CSharpEgitimKampi601/CSharpEgitimKampi601.csproj
+++ b/CSharpEgitimKampi601/CSharpEgitimKampi601.csproj
@@ -168,6 +168,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminLogin.Designer.cs">
+      <DependentUpon>AdminLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Customer.cs" />
     <Compile Include="FinancialCrm.cs">
       <SubType>Form</SubType>
@@ -193,6 +199,12 @@
     <Compile Include="FrmBiiling.Designer.cs">
       <DependentUpon>FrmBiiling.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmCategory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmCategory.Designer.cs">
+      <DependentUpon>FrmCategory.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -216,6 +228,15 @@
     </Compile>
     <Compile Include="FrmEmployee.Designer.cs">
       <DependentUpon>FrmEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmSpendings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmSpendings.Designer.cs">
+      <DependentUpon>FrmSpendings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AdminLogin.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\BankProcesses.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -257,6 +278,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomerOperations.cs" />
     <Compile Include="Services\MongoDbConnection.cs" />
+    <EmbeddedResource Include="AdminLogin.resx">
+      <DependentUpon>AdminLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FinancialCrm.resx">
       <DependentUpon>FinancialCrm.cs</DependentUpon>
     </EmbeddedResource>
@@ -269,6 +293,9 @@
     <EmbeddedResource Include="FrmBiiling.resx">
       <DependentUpon>FrmBiiling.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmCategory.resx">
+      <DependentUpon>FrmCategory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmCustomer.resx">
       <DependentUpon>FrmCustomer.cs</DependentUpon>
     </EmbeddedResource>
@@ -277,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmEmployee.resx">
       <DependentUpon>FrmEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSpendings.resx">
+      <DependentUpon>FrmSpendings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
